--- a/revtree/htdocs/css/revtree.css
+++ b/revtree/htdocs/css/revtree.css
@@ -107,6 +107,16 @@ div.revtree div#errormsg {
   visibility: hidden;
 }
 
+#filters label, #filters div {
+  margin-top: 8px;
+  font-size: 11px;
+}
+
+#options label, #options div {
+  margin-top: 8px;
+  font-size: 11px;
+}
+
 #filters table {
   width: 100%;
 }
@@ -115,12 +125,14 @@ div.revtree div#errormsg {
   padding: 0;
 }
 
-#filters select {
+fieldset, select {
   font-size: 11px;
 }
 
-#options select {
+#options th, #options td, #option tr {
+  padding: 0.3em 0.2em 0;
   font-size: 11px;
+  vertical-align: middle;
 }
 
 #filters td .trac-clause-lsep {
@@ -156,7 +168,7 @@ div.revtree div#errormsg {
   height: 2em;
 }
 
-#filters th, #filters td {
+#filters th, #filters td, #filter tr {
   padding: 0 .2em;
   vertical-align: middle;
 }
