--- a/revtree/htdocs/css/revtree.css
+++ b/revtree/htdocs/css/revtree.css
@@ -312,8 +312,7 @@ fieldset, select {
 
 /* Toolbox widget */
 .toolbox {
-  position: fixed;
-  z-index: 90;
+  float: left;
   bottom: 10px;
   right: 10px;
 }
@@ -326,6 +325,26 @@ fieldset, select {
   background-color: rgba(0, 60, 136, 0.7);
 }
 
+.toolbox button {
+  background-color: rgba(0, 60, 136, 0.5);
+  border: medium none;
+  border-radius: 0.3em;
+  color: white;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1.14em;
+  font-weight: bold;
+  height: 20px;
+  line-height: 0.4em;
+  margin: 2px auto 0;
+  padding: 0;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  top: -5px;
+  width: 20px;
+  white-space: pre;
+}
 
 /* Zoom/scale in/out widgets */
 .zoom-in, .scale_in {
@@ -336,39 +355,44 @@ fieldset, select {
   bottom: 0;
 }
 
-.zoom, .scale {
-  display: block;
+.zoom, .scale, .nav-changeset {
+  float: left;
+  /* display: block; */
   color: #fff;
   font-weight: bold;
   position: relative;
   padding: 2px;
 }
 
-.zoom button, .scale button {
-  border-radius: 0 0 2px 2px;
+/* .zoom button, .scale button, .nav-changeset button {
   background-color: rgba(0, 60, 136, 0.5);
   border: medium none;
   border-radius: 0.3em;
   color: white;
-  display: block;
+  cursor: pointer;
+  display: inline-block;
   font-size: 1.14em;
   font-weight: bold;
-  height: 1.375em;
-  width: 1.375em;
+  height: 20px;
   line-height: 0.4em;
-  margin-top: 2px;
+  margin: 2px auto 0;
   padding: 0;
+  position: relative;
   text-align: center;
   text-decoration: none;
-  cursor: pointer;
+  top: -5px;
+  width: 20px;
+  white-space: pre;
 }
-
-.zoom-icon, .scale-icon {
-  display: block;
+ */
+.zoom-icon, .scale-icon, .nav-icon {
+  margin-top: 2px;
+  display: inline-block;
   background-image: url(../images/zoom-icon.png);
   background-repeat: no-repeat;
   background-position: center center;
-  height: 1.375em;
+  height: 20px;
+  width: 20px;
 }
 
 .scale-icon {
@@ -377,32 +401,30 @@ fieldset, select {
 
 /* Navigation changeset widgets */
 .nav-icon {
-  display: block;
   background-image: url("../images/changeset.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  height: 1.375em;
 }
 
-.nav-changeset {
+/* .nav-changeset {
   display: block;
+  float: left;
   color: #fff;
   font-weight: bold;
   position: relative;
-  padding: 2px;
 }
-
+ */
+ /*
 .nav-changeset button {
   border-radius: 0 0 2px 2px;
   background-color: rgba(0, 60, 136, 0.5);
   border: medium none;
   border-radius: 0.3em;
   color: white;
-  display: block;
+  display: inline-block;
+  margin:0 auto;
   font-size: 1.14em;
   font-weight: bold;
-  height: 1.375em;
-  width: 1.375em;
+  height: 20px;
+  width: 20px;
   line-height: 0.4em;
   margin-top: 2px;
   padding: 0;
@@ -412,18 +434,25 @@ fieldset, select {
   border-color: #F00;
   position: relative;
   padding: 0px;
+  top: -5px;
 }
-
+ */
 .nav-src {
   background-image: url(../images/chgset-src-icon.png);
   background-repeat: no-repeat;
   background-position: center center;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
 }
 
 .nav-dest {
   background-image: url(../images/chgset-dest-icon.png);
   background-repeat: no-repeat;
   background-position: center center;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
 }
 
 .nav-changeset *:focus {
@@ -442,4 +471,18 @@ fieldset, select {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+#tools {
+  z-index: 1000;
+  clear: both;
+}
+
+#tools * {
+  opacity: 1;
+}
+
+.fixed {
+    position:fixed;
+    top:5px;
 }
