--- a/revtree/htdocs/css/revtree.css
+++ b/revtree/htdocs/css/revtree.css
@@ -312,7 +312,7 @@ fieldset, select {
 
 /* Toolbox widget */
 .toolbox {
-  float: left;
+  clear: both;
   bottom: 10px;
   right: 10px;
 }
@@ -364,27 +364,6 @@ fieldset, select {
   padding: 2px;
 }
 
-/* .zoom button, .scale button, .nav-changeset button {
-  background-color: rgba(0, 60, 136, 0.5);
-  border: medium none;
-  border-radius: 0.3em;
-  color: white;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 1.14em;
-  font-weight: bold;
-  height: 20px;
-  line-height: 0.4em;
-  margin: 2px auto 0;
-  padding: 0;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  top: -5px;
-  width: 20px;
-  white-space: pre;
-}
- */
 .zoom-icon, .scale-icon, .nav-icon {
   margin-top: 2px;
   display: inline-block;
@@ -404,39 +383,7 @@ fieldset, select {
   background-image: url("../images/changeset.png");
 }
 
-/* .nav-changeset {
-  display: block;
-  float: left;
-  color: #fff;
-  font-weight: bold;
-  position: relative;
-}
- */
- /*
-.nav-changeset button {
-  border-radius: 0 0 2px 2px;
-  background-color: rgba(0, 60, 136, 0.5);
-  border: medium none;
-  border-radius: 0.3em;
-  color: white;
-  display: inline-block;
-  margin:0 auto;
-  font-size: 1.14em;
-  font-weight: bold;
-  height: 20px;
-  width: 20px;
-  line-height: 0.4em;
-  margin-top: 2px;
-  padding: 0;
-  text-align: center;
-  text-decoration: none;
-  cursor: pointer;
-  border-color: #F00;
-  position: relative;
-  padding: 0px;
-  top: -5px;
-}
- */
+
 .nav-src {
   background-image: url(../images/chgset-src-icon.png);
   background-repeat: no-repeat;
