--- a/revtree/htdocs/css/revtree.css
+++ b/revtree/htdocs/css/revtree.css
@@ -47,6 +47,10 @@ div.revtree div#errormsg {
   margin-right: 2em;
 }
 
+.collapsed > .foldable *:link, .collapsed > .foldable *:visited {
+    background-color: #fff;
+}
+
 #query_form {
   margin-bottom: 10px;
 }
@@ -73,6 +77,7 @@ div.revtree div#errormsg {
   margin-left: 0em;
   margin-right: 0.5em;
   min-width: 0px;
+  background-color: #FFF;
 
   /* REMARK: important avoid label overlapping */
   float: left;
@@ -108,6 +113,15 @@ div.revtree div#errormsg {
   margin: 0;
   padding: 0.1em 0.5em 0.2em;
   font-size: 100%;
+}
+
+.buttons input[type=submit] {
+  box-shadow: 0.1em 0.1em 0.3em 0 #bbb;
+  -webkit-box-shadow: 0.1em 0.1em 0.3em 0 #bbb;
+  -moz-box-shadow: 0.1em 0.1em 0.3em 0 #bbb;
+  /* text-shadow: 0.1em 0.1em #eee; */
+  font-size: 100%;
+  color: #666;
 }
 
 #query_form hr {
@@ -312,7 +326,6 @@ fieldset, select {
 
 /* Toolbox widget */
 .toolbox {
-  clear: both;
   bottom: 10px;
   right: 10px;
 }
@@ -422,11 +435,34 @@ fieldset, select {
 
 #tools {
   z-index: 1000;
+}
+
+#buttons {
   clear: both;
+}
+
+#query {
+  float: left;
+}
+
+#toolbox {
+  float: left;
+}
+
+#tools {
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 #tools * {
   opacity: 1;
+}
+
+#filters {
+  background-color: #FFF;
+}
+
+#options {
+  background-color: #FFF;
 }
 
 .fixed {
