--- a/revtree/htdocs/css/revtree.css
+++ b/revtree/htdocs/css/revtree.css
@@ -122,6 +122,7 @@ div.revtree div#errormsg {
   /* text-shadow: 0.1em 0.1em #eee; */
   font-size: 100%;
   color: #666;
+  height: 24px;
 }
 
 #query_form hr {
