Fix #1234, Fix misc CSS style elements

--- a/revtree/templates/revtree.html
+++ b/revtree/templates/revtree.html
@@ -58,7 +58,7 @@
         event.preventDefault();
         event.stopPropagation();
 
-        window.abort_action_selector(event);
+        window.neorevtree.abort_action_selector(event);
       });
 
       // Ajax request for filter processing
@@ -97,6 +97,8 @@
 
              tree.build(1.0);
              tree.render();
+
+             tree = null;
 
              $("#main :input").removeAttr("disabled");
 
@@ -363,19 +365,19 @@
           <div id="nav-changeset" class="nav-changeset">
             <div class='nav-icon'></div>
             <button class="nav-dest" title="${_('Goto destination (ctrl + d)')}"
-                    onclick="scroll_dest(event)"> </button>
+                    onclick="neorevtree.scroll_dest(event)"> </button>
             <button class="nav-src" title="${_('Goto source (ctrl + s)')}"
-                    onclick="scroll_src(event)"> </button>
+                    onclick="neorevtree.scroll_src(event)"> </button>
           </div>
           <div id="zoom" class="zoom">
             <div class='zoom-icon'></div>
-            <button class="zoom-in" title="${_('Zoom In (ctrl + a)')}" onclick="zoom(1.05)">+</button>
-            <button class="zoom-out" title="${_('Zoom Out (ctrl + z)')}" onclick="zoom(0.95)">-</button>
+            <button class="zoom-in" title="${_('Zoom In (ctrl + a)')}" onclick="neorevtree.zoom(1.05)">+</button>
+            <button class="zoom-out" title="${_('Zoom Out (ctrl + z)')}" onclick="neorevtree.zoom(0.95)">-</button>
           </div>
           <div id="scale" class="scale">
              <div class='scale-icon'></div>
-            <button class="scale-in" title="${_('Scale In (ctrl + q)')}" onclick="scale(1.20)">+</button>
-            <button class="scale-out" title="${_('Scale out (ctrl + s)')}" onclick="scale(0.80)">-</button>
+            <button class="scale-in" title="${_('Scale In (ctrl + q)')}" onclick="neorevtree.scale(1.20)">+</button>
+            <button class="scale-out" title="${_('Scale out (ctrl + s)')}" onclick="neorevtree.scale(0.80)">-</button>
           </div>
         </div>
     </div>
