Fix #1234, Fix misc CSS style elements

--- a/revtree/templates/revtree.html
+++ b/revtree/templates/revtree.html
@@ -73,7 +73,7 @@
         }
       });
 
-      $("#svg").click(function(event){
+      $("#svg").dblclick(function(event){
         event.preventDefault();
         event.stopPropagation();
 
