Fix #1263 (tools), Scrolling in autocomplete proposal list do not work with direction keys

--- a/revtree/templates/revtree.html
+++ b/revtree/templates/revtree.html
@@ -15,165 +15,10 @@
 
     <script type="text/javascript">
     //<![CDATA[
-    jQuery(document).ready(function($) {
-      var warning_ctrl;
-      var window_ctrl;
-      var tools_ctrl;
-      var tools_top;
-      var tools_margin_left;
-
-      initializeFilters();
-
-      $("#nav-changeset").hide();
-
+    $(document).ready(function($) {
       $("#warning").hide();
-      warning_ctrl = $("#warning").clone(true);
-
-      $("#group").change(function() {
-        $("#groupdesc").enable(this.selectedIndex != 0);
-      }).change();
-
-      $(".foldable").enableFolding(false);
-
-      $("input[name$='_branch']").each(function() {
-        $(this).neosuggest('', 'autocompletion', null);
-      });
-
-      $(".datepicker").datepicker();
-
-      window_ctrl = $(window);
-      tools_ctrl = $("#tools");
-      tools_margin_left = tools_ctrl.offset().left;
-      tools_top = tools_ctrl.offset().top;
-
-      $(window).scroll(function() {
-        var sv_flag;
-        var sh_flag;
-
-        sv_flag = window_ctrl.scrollTop() > tools_top - 25;
-        sh_flag = window_ctrl.scrollLeft();
-
-        tools_ctrl.toggleClass('fixed', sv_flag);
-        if (window_ctrl.scrollTop() > tools_top - 25) {
-            $("#svg").css("margin-top", tools_ctrl.outerHeight(true) + "px");
-        }
-        else {
-          $("#svg").css("margin-top", "0px");
-        }
-
-        if(sv_flag) {
-          tools_ctrl.css("left", tools_margin_left + "px");
-        }
-
-        if(sh_flag && !sv_flag) {
-          tools_ctrl.css("margin-left", window_ctrl.scrollLeft() +"px");
-        }
-        else {
-           tools_ctrl.css("margin-left", "0px");
-        }
-      });
-
-      $("#svg").dblclick(function(event){
-        event.preventDefault();
-        event.stopPropagation();
-
-        window.neorevtree.abort_action_selector(event);
-      });
-
-      // Ajax request for filter processing
-      $('#submit_filters').on('click', function(event) {
-         event.preventDefault();
-         event.stopPropagation();
-
-         $("#warning").hide();
-         $("#svg_errormsg").hide();
-         $("#nav-changeset").hide();
-         $("#zoom").hide();
-         $("#scale").hide();
-         $("#svg").empty();
-
-         $("body h1").addClass("blink");
-
-         $.ajax({
-           url: "",
-           type: "POST",
-           async: true,
-           dataType: 'json', /* Server response data format */
-           data: $("#query_form").serialize(),
-           success: function(data) {
-             var tree;
-
-             $("#main :input").attr("disabled", "disabled");
-
-             tree = new RevTree(data.tree, data.url, data.style);
-
-             window.revtree = tree;
-             tree.init();
-
-             var field = $("#metrics");
-             field.css("font-family", data.fontfamily);
-             field.css("font-size", data.fontsize);
-
-             tree.build(1.0);
-             tree.render();
-
-             tree = null;
-
-             $("#main :input").removeAttr("disabled");
-
-             $("#zoom").show();
-             $("#scale").show();
-
-             /* REMARK: fix strange behavior float property not properly done */
-             $("#svgview").css("display", "none");
-             $("#svgview").css("display", "block");
-
-             $("select[name$='_revision']").each(function() {
-               var value = $(this).val();
-               $(this).empty();
-               $(this).addOptions(data.revisions);
-
-               window.revisions = data.revisions;
-               $(this).val(value);
-             });
-
-             $("select[name$='_author']").each(function() {
-               var value = $(this).val();
-               $(this).empty();
-               $(this).addOptions(data.authors);
-
-               window.authors = data.authors;
-
-               $(this).val(value);
-             });
-
-             $("body h1").removeClass("blink");
-
-             /* Adjust toolbox position with footer position */
-             var bottom;
-
-             bottom = $(document).height() - $("#footer").offset().top;
-             $("#toolbox").css("bottom", bottom + 5);
-           },
-           error: function(xhr, ajaxOptions, thrownError) {
-             if(xhr.status == 404) {
-               var ctrl;
-               ctrl = warning_ctrl.clone(true);
-               $("#warning").replaceWith(ctrl.append(xhr.responseText));
-               $("#warning").show();
-             }
-             else {
-               $("#svg_errormsg").html(xhr.responseText);
-               $("#svg_errormsg").show();
-             }
-             $("body h1").removeClass("blink");
-           }
-         });
-      });
-
-      // Simulate click on filter update button
-      $('#submit_filters').trigger('click');
-
+      $("#nav-changeset").hide();
+      $("body h1").addClass("blink");
     });
     // ]]>
     </script>
@@ -408,5 +253,7 @@
         </div>
     </div>
     <div id="svg" contextmenu="mymenu"></div>
+    <script type="text/javascript" data-main="${href.chrome('revtree/js/main.js')}"
+            charset="utf-8" src="${href.chrome('revtree/js/require-2.1.20/require.js')}"/>
   </body>
 </html>
