--- a/revtree/htdocs/css/revtree.css
+++ b/revtree/htdocs/css/revtree.css
@@ -340,6 +340,7 @@ fieldset, select {
 
 /* Toolbox widget */
 .toolbox {
+  display: block;
   bottom: 10px;
   right: 10px;
 }
@@ -348,19 +349,21 @@ fieldset, select {
   outline: none;
 }::-moz-focus-inner {border:0;}
 
-.toolbox button:hover {
+.toolbox button:hover, .toolbox input:hover {
   background-color: rgba(0, 60, 136, 0.7);
+  font-weight: normal;
+  text-shadow: none;
+  box-shadow: none;
 }
 
-.toolbox button {
+.toolbox button, .toolbox input {
   background-color: rgba(0, 60, 136, 0.5);
   border: medium none;
   border-radius: 0.3em;
   color: white;
   cursor: pointer;
   display: inline-block;
-  font-size: 1.14em;
-  font-weight: bold;
+  font-weight: normal;
   height: 20px;
   line-height: 0.4em;
   margin: 2px auto 0;
@@ -371,6 +374,8 @@ fieldset, select {
   top: -5px;
   width: 20px;
   white-space: pre;
+  text-shadow: none;
+  box-shadow: none;
 }
 
 /* Zoom/scale in/out widgets */
@@ -382,13 +387,14 @@ fieldset, select {
   bottom: 0;
 }
 
-.zoom, .scale, .nav-changeset {
+.zoom, .scale, .nav-changeset , .submit {
   float: left;
   /* display: block; */
   color: #fff;
-  font-weight: bold;
+/*  font-weight: bold; */
   position: relative;
   padding: 2px;
+/* padding-top: 14px; */
 }
 
 .zoom-icon, .scale-icon, .nav-icon {
@@ -460,11 +466,13 @@ fieldset, select {
 }
 
 #query {
-  float: left;
+  display: block;
+  clear: both;
 }
 
 #toolbox {
-  float: left;
+  clear: both;
+  display: block;
 }
 
 #tools {
@@ -548,4 +556,10 @@ fieldset, select {
  */
 #query fieldset input.fa-12x {
   font-size: 1.2em;
+  font-weight: normal;
+}
+
+.toolbox button.fa-11x {
+  font-size: 1.1em;
+  font-weight: normal;
 }
