#1288 (tools), Fix bug in Revtree improvements

--- a/revtree/templates/revtree.html
+++ b/revtree/templates/revtree.html
@@ -245,8 +245,8 @@
             <button class="fa fa-11x zoom-out" title="${_('Zoom Out (-)')}" onclick="neorevtree.zoom(0.95)"><span>&#xf010;</span></button>
           </div>
           <div id="scale" class="scale">
-            <button class="fa fa-11x scale-in" title="${_('Scale In (ctrl + q)')}" onclick="neorevtree.scale(1.20)"><span>&#xf160;</span></button>
-            <button class="fa fa-11x scale-out" title="${_('Scale out (ctrl + s)')}" onclick="neorevtree.scale(0.80)"><span>&#xf161;</span></button>
+            <button class="fa fa-11x scale-in" title="${_('Scale In (q)')}" onclick="neorevtree.scale(1.20)"><span>&#xf160;</span></button>
+            <button class="fa fa-11x scale-out" title="${_('Scale out (s)')}" onclick="neorevtree.scale(0.80)"><span>&#xf161;</span></button>
           </div>
         </div>
         <div id="svg_errormsg" class='svg_errormsg'></div>
