Fix #1298 (tools), RevTree improvement

--- a/revtree/htdocs/css/revtree.css
+++ b/revtree/htdocs/css/revtree.css
@@ -212,6 +212,7 @@ fieldset, select {
 }
 
 #filters td.filter {
+  width: 80%;
 }
 
 #filters td.and {
@@ -501,46 +502,6 @@ fieldset, select {
   -o-transition: top 10s;
 } */
 
-.loading-indicator {
-  bottom: 70px;
-  opacity: 0;
-  /* display: none; */
-  height: 0;
-  left: 0;
-  position: fixed;
-  right: 0;
-  text-align: center;
-
-  transition: all 2s;
-  -webkit-transition: all 2s;
-  -moz-transition: all 2s;
-  -o-transition: all 2s;
-  z-index: -100;
-  opacity: 0;
-}
-
-.loading-indicator-show {
-  z-index: 99;
-  opacity: 1;
-}
-
-.loading-indicator span {
-  background: rgba(0, 0, 0, 0.75) no-repeat center;
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-.loading-indicator span {
-  border-radius: 4px;
-  color: #fff;
-  display: inline-block;
-  font-size: 13px;
-  font-weight: normal;
-  line-height: 17px;
-  padding: 10px;
-  text-align: center;
-  vertical-align: middle;
-}
 /*
 @media screen {
   .no-print, .no-print * {
@@ -562,4 +523,81 @@ fieldset, select {
 .toolbox button.fa-11x {
   font-size: 1.1em;
   font-weight: normal;
+}
+
+.deleted {
+  color: #737373;
+  font-style: italic;
+}
+
+/* Load indicator */
+.loading-indicator {
+  bottom: 70px;
+  display: none;
+  height: 0;
+  left: 0;
+  position: fixed;
+  right: 0;
+  text-align: center;
+  z-index: 99;
+  display: none;
+}
+
+.loading-indicator span {
+  border-radius: 4px;
+  color: #fff;
+  display: inline-block;
+  font-size: 13px;
+  font-weight: normal;
+  line-height: 17px;
+  padding: 10px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.loading-indicator span.animated {
+  background: url("../images/loading.gif") no-repeat scroll 10px center rgba(0, 0, 0, 0.75);
+  padding-left: 30px;
+  padding-right: 10px;
+}
+
+.indicator-esc {
+  bottom: 70px;
+  opacity: 0;
+  /* display: none; */
+  height: 0;
+  left: 0;
+  position: fixed;
+  right: 0;
+  text-align: center;
+
+  transition: all 2s;
+  -webkit-transition: all 2s;
+  -moz-transition: all 2s;
+  -o-transition: all 2s;
+  z-index: -100;
+  opacity: 0;
+}
+
+.indicator-esc-show {
+  z-index: 99;
+  opacity: 1;
+}
+
+.indicator-esc span {
+  background: rgba(0, 0, 0, 0.75) no-repeat center;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.indicator-esc span {
+  border-radius: 4px;
+  color: #fff;
+  display: inline-block;
+  font-size: 13px;
+  font-weight: normal;
+  line-height: 17px;
+  padding: 10px;
+  text-align: center;
+  vertical-align: middle;
 }
