--- a/revtree/templates/revtree.html
+++ b/revtree/templates/revtree.html
@@ -19,6 +19,20 @@
       $("#warning").hide();
       $("#nav-changeset").hide();
       $("body h1").addClass("blink");
+
+      $(".loading-indicator").ajaxStart(function() { $(this).show(); })
+                             .ajaxStop(function() { $(this).hide(); });
+
+      /* Disable TAB navigation */
+      $(document).keydown(function(e) {
+        if (e.keyCode == 9 || e.which == 9) {
+          if(!$(e.target).hasClass("allowTab")) {
+            return false;
+          }
+        }
+
+        return True;
+      });
     });
     // ]]>
     </script>
@@ -27,8 +41,11 @@
     <h1>$title</h1>
     <!-- REMARK: the span below is used to compute font size -->
     <span id="metrics" class="metrics"></span>
+    <div class="loading-indicator">
+      <span class="animated">${_("Updating...")}</span>
+    </div>
     <div id="tooltip_connect" class="hidden"></div>
-    <div id="info_esc" class="loading-indicator loading-indicator-hidden">
+    <div id="info_esc" class="indicator-esc">
         <span class="animated">Press ESC to exit from changeset path selection mode</span>
     </div>
     <div id="tooltip" class="hidden">
@@ -180,7 +197,7 @@
                       <tbody py:with="last_clause = clause_num == (len(clauses) or 1) - 1">
                         <tr class="actions">
                           <td class="and" colspan="2">
-                            &nbsp;<label for="add_filter_${clause_num}">And</label>&nbsp;
+                            &nbsp;<label for="add_filter_${clause_num}">New rule</label>&nbsp;
                             <select name="add_filter_${clause_num}" id="add_filter_${clause_num}">
                               <option></option>
                               <option py:for="field_name in field_names" value="${field_name}">${fields[field_name]}</option>
@@ -190,7 +207,7 @@
                             </div>
                           </td>
                           <td py:if="last_clause" class="or" colspan="2">
-                            <label for="add_clause">Or</label>&nbsp;
+                            <label for="add_clause">New clause</label>
                             <select name="add_clause_${clause_num + 1}" id="add_clause">
                               <option></option>
                               <option py:for="field_name in field_names" value="${field_name}">${fields[field_name]}</option>
